--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
   <title>Title</title>
 </head>
 <body>
-<h1>Hello world</h1>
+<h1>investor.bg banners</h1>
+
+<h3>300x250 Rectangle & Rollband</h3>
+<p>GIF: 12.5 KB - Същия размер е за мобилна версия, но има изискване 9KB размер. Трябва да се махнат анимациите.</p>
+<iframe style="overflow: hidden" src="investor-300-250-rectangle.html" width="300" height="250" scrolling="no" frameborder="0"></iframe>
+
+<h3>960x200 Rollband</h3>
+<p><strong>Въпрос:</strong> В документацията <a href="http://reklama.investor.bg/id-304/%D0%A2%D0%B5%D1%85%D0%BD%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8-%D0%B8%D0%B7%D0%B8%D1%81%D0%BA%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F.html#rollband">тук</a> не става ясно дали банера може да е анимиран GIF. Задължително ли е да е Flash или може и да е GIF с дадените размери? </p>
+
+<p>Главния текст и този отдолу може да е анимиран и да се въртят 2-3 варианта.</p>
+<iframe style="overflow: hidden" src="investor-960-200-rollband.html" width="960" height="200" scrolling="no" frameborder="0"></iframe>
 </body>
 </html>
