--- a/investor-300-250-rectangle2.html
+++ b/investor-300-250-rectangle2.html
@@ -11,6 +11,7 @@
     }
     #logo {
       margin-top: 14px;
+      width: 260px;
       -webkit-transition: all 300ms ease-out;
       -ms-transition: all 300ms ease-out;
       transition: all 300ms ease-out;
