--- a/investor-300-250-rectangle2.html
+++ b/investor-300-250-rectangle2.html
@@ -9,24 +9,30 @@
       padding:0;
       font-family: 'Roboto', serif;
     }
+
     #logo {
-      margin-top: 14px;
-      width: 260px;
+      margin: 20px auto 0 auto;
+      width: 100%;
       -webkit-transition: all 300ms ease-out;
       -ms-transition: all 300ms ease-out;
       transition: all 300ms ease-out;
     }
 
-    .logo-small {
-      margin-top: -8px!important;
+    .logo-small #logo {
+      margin-top: -3px!important;
       transform: scale(.7);
+    }
+
+    .logo-small--share #logo {
+      width: 215px;
+      margin: 25px 0 0 0;
     }
 
     #main {
       width: 300px;
       height: 250px;
       box-sizing: border-box;
-      padding: 20px;
+      padding: 15px;
       background: url("bgr.jpg") no-repeat top right;
       position: relative;
     }
@@ -49,11 +55,11 @@
       transition: background-color 300ms ease-out, height 300ms ease-out;
     }
 
-    .color-blue {
+    .color-blue .slide {
       background-color: #5857a5;
     }
 
-    .make-big {
+    .make-big .slide {
       height: 180px;
     }
 
@@ -68,8 +74,8 @@
     }
 
     .text.animated {
-      -webkit-animation-duration: 300ms;
-      animation-duration: 300ms;
+      -webkit-animation-duration: 150ms;
+      animation-duration: 150ms;
     }
 
     .text-3, .text-4 {
@@ -81,6 +87,11 @@
       font-size: 38px;
     }
 
+    .arrow {
+      width: 30px;
+      margin-top: 5px;
+    }
+
     .hide {
       display: none;
     }
@@ -90,17 +101,35 @@
       display: inline;
     }
 
+    .share {
+      width: 40px;
+      position: absolute;
+      top: 40px;
+      right: -60px;
+      -webkit-transition: all 300ms ease-out;
+      -ms-transition: all 300ms ease-out;
+      transition: all 300ms ease-out;
+    }
+
+    .logo-small--share .share {
+      right: 10px;
+    }
+
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
 </head>
 <body>
-<div id="main">
+<div id="main" class="logo-small--share">
   <img id="logo" src="bbr-logo.svg" alt="Лого">
+  <img id="share" class="share" src="share.svg" alt="Сподели">
   <div id="slide1" class="slide center slide--one">
     <span id="1" class="text text-1">&euro; 3 000 000 по плана "Юнкер"</span>
-    <span id="2" class="text text-2 hide">&euro; 3 000 000 по плана "Юнкер" към търговски банки</span>
+    <div id="2" class="text text-2 hide">
+      <div>&euro; 3 000 000 по плана "Юнкер" към търговски банки</div>
+      <img class="arrow" src="right-arrow.svg" alt="Стрелка">
+    </div>
     <span id="3" class="text text-3 hide">От 3 до 24 млн. лева за инвестиционно, проектно и свързано с тях оборотно финансиране</span>
     <span id="4" class="text text-4 hide">От 3 до 24 млн. лева за микро, малки, средни и междинни предприятия</span>
     <span id="5" class="text text-5 hide">www.bbr.bg</span>
@@ -108,8 +137,8 @@
 </div>
 <script>
   var texts = $('.text');
-  var slide1 = $('#slide1');
-  var logo = $('#logo');
+  var main = $('#main');
+  var share = $('#share');
   var text1 = $('.text-1');
   var animationEnd = 'webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend';
 
@@ -130,19 +159,27 @@
       nextItem = text1;
     }
 
-    if (data === 'fadeIn') {
+    if (data === 'fadeInLeft') {
       $item.removeClass('show');
 
       setTimeout(function(){
-        $item.animateCss('fadeOut');
+        $item.animateCss('fadeOutRight');
 
         if (item.id !== '5') {
-          slide1.toggleClass('color-blue');
+          main.toggleClass('color-blue');
+        }
+
+        if (item.id === '5') {
+          main.addClass('logo-small--share');
+        }
+
+        if (item.id === '1') {
+          main.removeClass('logo-small--share');
         }
 
         if (item.id === '1' || item.id === '4') {
-          slide1.toggleClass('make-big');
-          logo.toggleClass('logo-small');
+          main.toggleClass('make-big');
+          main.toggleClass('logo-small');
         }
       }, 1500);
 
@@ -150,7 +187,7 @@
     }
 
     $item.addClass('hide');
-    nextItem.removeClass('hide').addClass('show').animateCss('fadeIn');
+    nextItem.removeClass('hide').addClass('show').animateCss('fadeInLeft');
   }
 
   texts.each(function(){
@@ -160,9 +197,9 @@
   });
 
   setTimeout(function(){
-    slide1.addClass('color-blue make-big');
-    logo.addClass('logo-small');
-    text1.animateCss('fadeOut');
+    main.removeClass('logo-small--share').addClass('color-blue make-big logo-small');
+//    share.animateCss('fadeOut');
+    text1.animateCss('fadeOutRight');
   }, 1500);
 
 </script>
