--- a/investor-300-250-tvc.html
+++ b/investor-300-250-tvc.html
@@ -198,10 +198,10 @@
     });
   });
 
-  setTimeout(function(){
-    main.removeClass('logo-small--share').addClass('color-blue make-big logo-small');
-    text1.animateCss('fadeOutRight');
-  }, 1500);
+//  setTimeout(function(){
+//    main.removeClass('logo-small--share').addClass('color-blue make-big logo-small');
+//    text1.animateCss('fadeOutRight');
+//  }, 1500);
 
 </script>
 </body>
