--- a/investor-300-250-tvc-video-only.html
+++ b/investor-300-250-tvc-video-only.html
@@ -37,7 +37,7 @@
 <body>
 <div id="main" class="logo-small--share">
   <img id="logo" src="bbr-logo.svg" alt="Лого">
-  <video id="video" controls autoplay muted>
+  <video id="video" poster="poster.jpg" controls autoplay muted>
     <source src="video.mp4" type="video/mp4">
   </video>
 </div>
