--- a/investor-300-250-tvc-video-only.html
+++ b/investor-300-250-tvc-video-only.html
@@ -29,6 +29,18 @@
       width: 100%;
     }
 
+    video::-internal-media-controls-download-button {
+      display:none;
+    }
+
+    video::-webkit-media-controls-enclosure {
+      overflow:hidden;
+    }
+
+    video::-webkit-media-controls-panel {
+      width: calc(100% + 30px); /* Adjust as needed */
+    }
+
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
