--- a/test-invoice/index.html
+++ b/test-invoice/index.html
@@ -28,7 +28,7 @@
 
   <main>
 
-    <div id="invoice-container" style="margin-left:2rem!important" class="ui basic segment">
+    <div id="invoice-container" style="margin:0!important; box-shadow:none!important;" class="ui basic segment">
 
       <form class="ui tiny form" method="POST" action="" id="invoice_app">
         <input type='hidden' name='csrfmiddlewaretoken' value='BAphuHudufHVuZkVW7VButRC1vWvCHLd' />
@@ -39,13 +39,13 @@
 
         <div class="ui grid">
 
-          <div class="equal width row _pb0">
-            <div class="column">
+          <div class="equal width row _pb0" style="display:block!important;width: 100%!important;">
+            <div class="column" style="display:block!important;width: 50%!important;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;float:left;">
               <h1>Фактура
                 <small>оригинал</small>
               </h1>
             </div>
-            <div class="column">
+            <div class="column" style="display:block!important;width: 50%!important;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;float:left;">
 
 
 
@@ -61,7 +61,7 @@
 
 
 
-                <input class="numberinput" id="id_number" min="0" name="number" type="number" value="37" />
+                <input style="width: 240px;" class="numberinput" id="id_number" min="0" name="number" type="number" value="37" />
 
 
 
@@ -90,7 +90,7 @@
 
 
 
-                <input class="dateinput" id="id_released_at" name="released_at" type="text" value="2016-12-20" />
+                <input style="width: 240px;" class="dateinput" id="id_released_at" name="released_at" type="text" value="2016-12-20" />
 
 
 
@@ -119,7 +119,7 @@
 
 
 
-                <input class="dateinput" id="id_taxevent_at" name="taxevent_at" type="text" value="2015-02-17" />
+                <input style="width: 240px;" class="dateinput" id="id_taxevent_at" name="taxevent_at" type="text" value="2015-02-17" />
 
 
 
